Closed
Bug 92453
Opened 24 years ago
Closed 24 years ago
Remove lowsrc support
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla0.9.6
People
(Reporter: chrispetersen, Assigned: pavlov)
References
()
Details
(Keywords: testcase, Whiteboard: [need extensive lowsrc tests])
Attachments
(2 files, 1 obsolete file)
257 bytes,
text/html
|
Details | |
7.69 KB,
patch
|
jag+mozilla
:
review+
attinasi
:
superreview+
|
Details | Diff | Splinter Review |
Build: 2001072418
Platform: All
Expected Results: LOWSRC image should be replaced by higher resolution image
What I got: LOWSRC image is displayed only
Steps to reproduce:
1) Go to url. Look at the center image (Free Preview CD- Filemaker 5.5). This
image should be the high resolution version.
2) Now , press the reload button.
3) LOWSRC image replaces the high rez image
4) Multiple reloads doesn't seem to correct the problem. User must place focus
in URL field and press return to reflow the document.
Reporter | ||
Comment 1•24 years ago
|
||
You might see the problem when upon visiting the site. If not , reloading the
page should cause the problem.
Reporter | ||
Comment 2•24 years ago
|
||
Comment 4•24 years ago
|
||
LOWSRC is totally broken. We need some tests to really assess the extent of the
problems, but for now I think we are better off disabling it until we get it
working right. Currently, the lowsrc image either fails totally or gets stuck
and prevents the proper image from displaying.
Question: do we even want to implement lowsrc? At the very least we need to
restrict it to Quirks mode since it is not standard.
Status: NEW → ASSIGNED
Keywords: qawanted
Priority: -- → P2
Summary: Image element's LOWSRC not always replaced be higher rez image → Image element's LOWSRC image not always replaced be higher rez image
Whiteboard: [need extensive lowsrc tests]
Target Milestone: --- → mozilla1.0
Comment 5•24 years ago
|
||
Off the top of my head, I don't recall MSIE handling lowsrc. I always thought
it was just NS 4. Can someone verify this? If this is the case, then I think we
shouldn't support it either. It is outdated and not standard, and although it
gives a "cool" effect on some sites if the user is on a dialup, high speed
connections are gaining popularity and this is less of a concern. I always
thought it more of a nuisance while visiting gimp.org on a high speed
connection. It creates a weird effect that looks like the browser is having
issues or something. If a webmaster really wants this feature, he can do it
with DOM to gain more control of the invocation and extent of it. But that's
just my opinion...
Adding 4xp keyword.
Keywords: 4xp
Updated•24 years ago
|
Comment 6•24 years ago
|
||
Bleah. "lowsrc" isn't in HTML4, deprecated or otherwise; it's a disgusting hack
outside the proper realm of HTML that should be laid to rest in the same grave
as <layer> (all the more so because it has no impact on the final rendering of
the page). Changing summary.
Assignee | ||
Comment 7•24 years ago
|
||
I'd vote for removing support for it all together. Currently do we the load for
lowsrc properly, but we never display it.. so we waste time downloading the
image if one is present.
Assignee | ||
Comment 8•24 years ago
|
||
Assignee | ||
Comment 9•24 years ago
|
||
reassigning to myself.
need r= and sr=
Assignee: attinasi → pavlov
Status: ASSIGNED → NEW
Keywords: patch
Target Milestone: mozilla1.0 → mozilla0.9.6
Assignee | ||
Comment 10•24 years ago
|
||
Comment on attachment 53322 [details] [diff] [review]
Fix
this patch was missing the removal of a html attribute
Attachment #53322 -
Attachment is obsolete: true
Assignee | ||
Comment 11•24 years ago
|
||
Comment 12•24 years ago
|
||
Comment on attachment 53439 [details] [diff] [review]
Real removal of lowsrc
r=jag
(including the other bug fix that's in there).
Attachment #53439 -
Flags: review+
Comment 13•24 years ago
|
||
Comment on attachment 53439 [details] [diff] [review]
Real removal of lowsrc
sr=attinasi - Thanks Pavlov
Attachment #53439 -
Flags: superreview+
Assignee | ||
Comment 14•24 years ago
|
||
fixed. no more lowsrc. we may want to note this somewhere so people know.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 15•24 years ago
|
||
layout newsgroup might be good.
BTW: I checked Composer and it has no lowsrc stuff int eh image attributes lists
- good thing! :)
Comment 16•24 years ago
|
||
Agggh, ya bastards. I spent so much time getting this fixed (bug 27388) just to
get scrapped. I understand why we don't need it anymore, but damn...
BTW, these window tabs are sweet. They make bug tracking a lot easier! :)
(Hmm, what bug was that? Oh yeah, it says it at the top)
Comment 17•24 years ago
|
||
According to a comment in 23066 there's a DOM level 1 property lowSrc - has this
been removed as well?
Assignee | ||
Comment 18•24 years ago
|
||
lowSrc in the dom1 spec was, as i understand it, an error. it is going to be
removed from future revisions of the spec.
Comment 19•24 years ago
|
||
I was just doing some HTML support testing and noticed that you had dropped
LOWSRC. It looks like the train has long-since left on this issue, but someone
raised the hypothetical Q of whether IE supports this attribute so I thought I
would address that.
It does. It has since IE4. (Opera does not, BTW.)
Granted, this is a small feature that IE implemented as a "me too" to netscape,
but now IE is the "me first" case. I have no idea if that will affect your
decision here.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 20•24 years ago
|
||
this bug is fixed. if you want to file a new bug, go ahead, but it isn't going
to get fixed.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 21•23 years ago
|
||
Opera 6.05 *does* support lowsrc, for the record. It's hard to explain to users
that something that worked in Netscape 4.79, does work in both IE and Opera, and
worked in earlier Mozilla releases, now has been removed from Mozilla and Netscape.
Comment 22•23 years ago
|
||
I'm actually upset that lowsrc doesn't exist anymore, but I guess I'll just
browse slow sites with IE instead, right?
Comment 23•22 years ago
|
||
For the record:
Bug 158610 comment 6:
{
Created an attachment (id=124847)
Implement lowsrc attribute
This patch implements the setting and querying of the lowsrc attribute to allow
these sites to work.
It does NOT make lowsrc work, and we have no plans to do that.
}
LowSrc support:
First, this bug patch removed it completely;
Then, bug 158610 patch restored the get/set part (only).
You need to log in
before you can comment on or make changes to this bug.
Description
•