removing lowsrc support.  bug 92453.  r=jag sr=attinasi